--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
+  "type": "module",
   "name": "discord-bot",
   "version": "1.0.0",
   "description": "inhouse bot for Starcraft: Remastered",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,11 @@
   },
   "homepage": "https://github.com/rustiebeats/starcraftDiscordBot#readme",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.29.0"
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1"
   }
 }
